mongodb/manifest.yaml
apiVersion: apps/v1 
kind: Deployment
metadata: 
  name: mongodb
  namespace: roboshop
  # these are replica set labels
  labels:
    project: roboshop
    component: mongodb
    tier: db 
spec:
  replicas: 1
  selector:
  # these labels are used to select pods
    matchLabels:
      project: roboshop
      component: mongodb
      tier: db
  # pod defination 
  template:
    metadata:
      labels:
        project: roboshop
        component: mongodb
        tier: db
    spec:
      containers: 
      - name: mongodb
        image: singalasreenivasulu/mongodb:v1 
        imagePullPolicy: Always
        readinessProbe:
          tcpSocket:
            port: 27017
          initialDelaySeconds: 10
          periodSeconds: 10
        livenessProbe:
          tcpSocket: 
            port: 27017
          initialDelaySeconds: 5
          periodSeconds: 5
---
apiVersion: v1 
kind: Service
metadata: 
  name: mongodb
  namespace: roboshop
spec:
  selector:
    project: roboshop
    component: mongodb
    tier: db 
  ports:
    - protocol: TCP 
      port: 27017 # service port
      targetPort: 27017 # container port
