mongodb/network-policy.yaml
apiVersion: networking.k8s.io/v1 
kind: NetworkPolicy 
metadata:
    name: mongodb-accept-catalogue
    namespace: roboshop 
spec:
    podSelector:
        matchLabels:
            project: roboshop 
            component: mongodb 
            tier: db 
    policyTypes:
    - Ingress:
    ingress:
    - from: 
      - podSelector:
            matchLabels: 
                project: roboshop
                component: catalogue
                tier: backend
      - podSelector:
            matchLabels:
                project: roboshop
                component: user
                tier: backend
      ports:
      - protocol: TCP 
        port: 27017
